--- a/main.css
+++ b/main.css
@@ -10,3 +10,9 @@
   background-color: black;
   width: 100%;
 }
+
+input[type='button'] {
+  border: 1px solid black;
+  margin: 5px;
+  font-size: 16px;
+}
