--- a/old_files/main.css
+++ b/old_files/main.css
@@ -26,7 +26,7 @@ div.button_container {
 .body_columns_container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: space-between; */
   width: 100%;
 }
 .body_column {
