--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,7 @@
   height: 200px;
   border: 1px solid black;
   padding-left: 2px;
+  position: relative;
 }
 .sort-bar-container {
   height: 100%;
