--- a/style.css
+++ b/style.css
@@ -83,3 +83,25 @@
 .sort-bar.unsorted {
   background-color: lightgray;
 }
+
+/* Popup */
+.popup-outer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+.popup-inner {
+  position: absolute;
+  left: 20%;
+  right: 20%;
+  top: 15%;
+  bottom: 25%;
+  background: white;
+  border: 1px solid black;
+  padding: 15px;
+}
