--- a/public/style.css
+++ b/public/style.css
@@ -31,6 +31,9 @@
   border: none;
   cursor: pointer;
 }
+.topbar-button.inactive {
+  color: grey;
+}
 .topbar-text {
   font-size: 22px;
   margin: 5px;
