--- a/public/style.css
+++ b/public/style.css
@@ -117,9 +117,37 @@
   position: absolute;
   left: 20%;
   right: 20%;
-  top: 15%;
-  bottom: 25%;
+  top: 28%;
+  bottom: 35%;
   background: white;
   border: 1px solid black;
   padding: 15px;
+}
+.popup-inner-container {
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+  align-items: center;
+}
+.popup-inner button {
+  color: black;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  border: 1px solid black;
+  margin-top: 25px;
+}
+.popup-inner button div {
+  font-size: 8px;
+}
+.popup-title {
+  font-size: 28px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+.popup-text {
+  text-align: center;
+  font-size: 14px;
 }
